--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -345,12 +345,15 @@ button[aria-disabled="true"] {
   border-top-left-radius: 2rem;
   border-top-right-radius: 2rem;
   border-top: var(--border-by-rezky);
-  padding: 0.5rem;
+  padding: 0.75rem 0.5rem 1.5rem 0.5rem;
   height: 50px;
   margin-bottom: -50px;
   max-width: 1200px;
   margin-left: -30px;
   margin-right: -30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .hero-bottom-text {
